added styling to personal websight

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head> 
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <img src="https://image.ibb.co/heu8M5/34bef4e287b95cbc3506d32c18d341bd.jpg">
