added comic sans since its kuul and added mlg background gif

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
         <h1>KaytosTech</h1>
         <p> Ill hack your toaster</p>
         <p>and DDOS your microwave</p>
+        <p>(i hope you like comic sans)</p>
+        <font face = "¯\_(ツ)_/¯" size = "5">Times New Roman</font><br />
     </body>
 </html>
