--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <img src="https://image.ibb.co/heu8M5/34bef4e287b95cbc3506d32c18d341bd.jpg">
         <h1>KaytosTech</h1>
         <p> Ill hack your toaster</p>
-        <p>and DDOS your microwave</p>
+        <p> and DDOS your microwave</p>
+        <p> Discord account made on February 7,2017 </p>
         <p>(i hope you like comic sans)</p>
     </body>
 </html>
